# easywx

./: .gitignore  README.md  button_boxes.py  button_window.py  main.py  pyproject.toml  settings.py
easywx/: __init__.py  button_boxes.py  button_window.py  choice_window.py  demo.py  dir_boxes.py  other_boxes.py  settings.py
