[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "easywx"
author = "Marcus Croucher"
author-email = "timbledum@gmail.com"
home-page = "https://github.com/timbledum/easywx"
classifiers = ["License :: OSI Approved :: Apache Software License",
               "Programming Language :: Python :: 3 :: Only",
               "Intended Audience :: Developers",
               "Topic :: Software Development :: Libraries :: Python Modules"]

requires = ["wxpython",
            "attrs"]

dev-requires = ["flit",
                "pyinstaller"]

description-file = "README.md"
requires-python = ">=3.3"
keywords = "easygui gui wxpython function"
